# cord

./: .gitignore  BEHAVIOR.md  README.md  RFC.md  pyproject.toml
examples/: demo.cord  simple.cord  simple_run.cord
experiments/: behavior_compare.py
src/cord/: __init__.py  cli.py  db.py  prompts.py
src/cord/mcp/: server.py
src/cord/runtime/: codex_app_server_worker.py  dispatcher.py  engine.py  process_manager.py
src/cord/runtime/harness/: __init__.py  amp.py  base.py  claude.py  codex_app_server.py  factory.py  registry.py
tests/: test_cli.py  test_db.py  test_engine.py  test_harness.py  test_mcp_server.py
tests/fixtures/: minimal.cord  section16.cord  with_block_strings.cord  with_deps.cord
